--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Build and Push Docker Image
         uses: mr-smithers-excellent/docker-build-push@v4
         with:
-          image: kimykim/docker-django-webapp-linux
+          image: kimosim/docker_ws
           tag: v1
           registry: docker.io
           username: ${{ secrets.DOCKER_USERNAME }}
